# arduinobot_python_publisher

./: readme.txt
install/: local_setup.sh  setup.sh
install/arduinobot_python_firmware/lib/arduinobot_python_firmware/: simple_serial_transmitter.py
install/arduinobot_python_firmware/share/ament_index/resource_index/parent_prefix_path/: arduinobot_python_firmware
install/arduinobot_python_firmware/share/arduinobot_python_firmware/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arduinobot_python_firmware/share/arduinobot_python_firmware/cmake/: arduinobot_python_firmwareConfig.cmake
log/: latest_build
src/arduinobot_python_firmware/: CMakeLists.txt  package.xml
